# voiceland

./: .gitignore  Cargo.toml  README.md
examples/: config.example.yaml  server.cert  server.key
voiceland-common/: Cargo.toml
voiceland-core/: Cargo.toml
voiceland-core/src/: config.rs  consts.rs  handler.rs  main.rs  structs.rs
voiceland-core/src/config/: default.rs
voiceland-core/src/structs/: config.rs
voiceland-core/src/utils/: avatar.rs
voiceland-server/: Cargo.toml
voiceland_cli/: Cargo.toml  README.md
voiceland_cli/src/: main.rs
voiceland_common/: Cargo.toml  README.md
voiceland_common/src/: logs.rs
voiceland_core/: Cargo.toml  README.md
voiceland_core/src/: handler.rs  main.rs  multiverse.rs  structs.rs
voiceland_core/src/config/: default.rs
voiceland_core/src/structs/: requests.rs
voiceland_internal_tests/: Cargo.toml  README.md  ffmpeg.c
voiceland_internal_tests/src/: main.rs  packet_gen.rs
voiceland_protocol/: Cargo.toml  README.md
voiceland_protocol/archive/src_1/: serializers.rs  structs.rs
voiceland_protocol/src/: lib.rs  parser.rs  serializers.rs  structs.rs  utils.rs
voiceland_protocol/src/parser/: open_portal.rs
voiceland_protocol/src/structs/: algo.rs  algs.rs  op.rs  packet.rs  payload.rs
voiceland_protocol/src/structs/op/: join_portal.rs  open_portal.rs
voiceland_protocol/src_old/: lib.rs
