[package]
name = "voiceland-core"
version = "1.0.0"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
quinn = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }

voiceland-common = { workspace = true }