[package]
name = "voiceland_core"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
quinn = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
ulid = { workspace = true }

voiceland_common = { workspace = true }

rustls-pemfile = "1"
rcgen = "0.11.1"